# senc

./: .gitignore  .releaserc.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  example.js  example.ts
.circleci/: config.yml
.github/workflows/: ValidatePRTitle.yml
_ci/: .prettierignore  common.ts  main.sen.ts  package.json  pnpm-lock.yaml  tsconfig.json
example/: package.json  pnpm-lock.yaml
example/javascript/: foo.js  main.sen.js
example/javascript/outfile/: main.sen.js
example/typescript/: main.sen.ts
src/: engine.rs  files.rs  logger.rs  main.rs  module_loader.rs  ops.rs  threadpool.rs  validator.rs
src/builtins/: console.js  hcl.js  path.js  senc.js
src/templated_builtins/: staticpath.js.hbs
tests/fixtures/: args.js  import_hcl.js  import_json.js  import_restricted_to_project_root.js  import_yaml.js  multi_outfile.js  outfile.js  outfile_hcl_prefix.js  outfile_prefix.js  package.json  simple.js  simple.ts  simple_yaml.js  someconfig.json  someconfig.yaml  with_lodash.js
tests/fixtures/aws/us-east-1/vpc/: main.js
tests/fixtures/jsonschema/: fail.js  pass.js  schema.json
